--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,4 +18,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:wormgas]
-command=python wormgas.py
+command=python /vagrant/wormgas.py
