--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-# discord.py rewrite as of 2019-03-06
-# https://github.com/Rapptz/discord.py/tree/aceec2009a7c819d2236884fa9ccc5ce58a92bea
-git+https://github.com/Rapptz/discord.py@aceec2009a7c819d2236884fa9ccc5ce58a92bea#egg=discord.py
-
 aiohttp==3.5.4
-pip==19.0.3
-pytz==2018.9
-setuptools==40.8.0
+discord.py==1.1.1
+pytz==2019.1
 stemming==1.0.1
-wheel==0.33.1
 wikipedia==1.4.0
