--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
-version: '3'
+version: '3.8'
 
 services:
   wormgas:
     image: docker.pkg.github.com/williamjacksn/wormgas/wormgas
-    build: .
+    init: True
