--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
---extra-index-url https://alpine-wheels.github.io/index/
+--extra-index-url https://alpine-wheels.github.io/index
+
 aiohttp==3.6.2
 discord.py==1.5.0
 pytz==2020.1
