--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,5 +2,5 @@ version: '3.8'
 
 services:
   wormgas:
-    image: docker.pkg.github.com/williamjacksn/wormgas/wormgas
+    image: ghcr.io/williamjacksn/wormgas
     init: True
