--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -31,4 +31,6 @@ jobs:
       - name: Build the container image
         uses: docker/build-push-action@v2.5.0
         with:
+          cache-from: |
+            ghcr.io/${{ github.repository_owner }}/wormgas
           tags: ghcr.io/${{ github.repository_owner }}/wormgas
