--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -31,6 +31,10 @@ jobs:
       - name: Build the container image
         uses: docker/build-push-action@v2.5.0
         with:
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
           cache-from: |
+            ghcr.io/${{ github.repository_owner }}/wormgas
+          cache-to: |
             ghcr.io/${{ github.repository_owner }}/wormgas
           tags: ghcr.io/${{ github.repository_owner }}/wormgas
