--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -20,14 +20,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1.3.0
 
-      - name: Log in to GitHub container registry
-        if: github.event_name == 'push' || github.event_name == 'release'
-        uses: docker/login-action@v1.9.0
-        with:
-          registry: ghcr.io
-          password: ${{ github.token }}
-          username: ${{ github.repository_owner }}
-
       - name: Build the container image
         uses: docker/build-push-action@v2.5.0
         with:
@@ -37,3 +29,21 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/wormgas
           load: true
           tags: ghcr.io/${{ github.repository_owner }}/wormgas
+
+      - name: Log in to GitHub container registry
+        if: github.event_name == 'push' || github.event_name == 'release'
+        uses: docker/login-action@v1.9.0
+        with:
+          registry: ghcr.io
+          password: ${{ github.token }}
+          username: ${{ github.repository_owner }}
+
+      - name: Push latest image to registry
+        if: github.event_name == 'push'
+        run: docker image push ghcr.io/${{ github.repository_owner }}/wormgas
+
+      - name: Tag and push release image to registry
+        if: github.event_name == 'release'
+        run: |
+          docker image tag ghcr.io/${{ github.repository_owner }}/wormgas:latest ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
+          docker image push ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
