--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -17,22 +17,33 @@ jobs:
     name: Build the container image
     runs-on: ubuntu-latest
     steps:
-
-      - name: Check out the repository
-        uses: actions/checkout@v2.3.4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.3.0
 
       - name: Build the container image
-        uses: docker/build-push-action@v1.1.0
+        uses: docker/build-push-action@v2.5.0
         with:
-          repository: wormgas
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
+          cache-from: |
+            ghcr.io/${{ github.repository_owner }}/wormgas
+          load: true
+          tags: ghcr.io/${{ github.repository_owner }}/wormgas
 
-      - name: Tag and push the image
+      - name: Log in to GitHub container registry
         if: github.event_name == 'push' || github.event_name == 'release'
-        uses: docker/build-push-action@v1.1.0
+        uses: docker/login-action@v1.9.0
         with:
-          repository: ${{ github.repository_owner }}/wormgas
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
           password: ${{ github.token }}
-          tag_with_ref: true
-          add_git_labels: true
+          username: ${{ github.repository_owner }}
+
+      - name: Push latest image to registry
+        if: github.event_name == 'push'
+        run: docker image push ghcr.io/${{ github.repository_owner }}/wormgas
+
+      - name: Tag and push release image to registry
+        if: github.event_name == 'release'
+        run: |
+          docker image tag ghcr.io/${{ github.repository_owner }}/wormgas:latest ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
+          docker image push ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
