--- a/requirements.txt
+++ b/requirements.txt
@@ -6,31 +6,27 @@
 #
 --extra-index-url https://alpine-wheels.github.io/index
 
-aiohttp==3.8.6
+aiohttp==3.9.1
     # via
     #   -r requirements.in
     #   discord-py
 aiosignal==1.3.1
     # via aiohttp
-async-timeout==4.0.3
-    # via aiohttp
 attrs==23.1.0
     # via aiohttp
 beautifulsoup4==4.12.2
     # via wikipedia
-certifi==2023.7.22
+certifi==2023.11.17
     # via requests
 charset-normalizer==3.3.2
-    # via
-    #   aiohttp
-    #   requests
+    # via requests
 discord-py==2.3.2
     # via -r requirements.in
 frozenlist==1.4.0
     # via
     #   aiohttp
     #   aiosignal
-idna==3.4
+idna==3.6
     # via
     #   requests
     #   yarl
@@ -44,9 +40,9 @@ soupsieve==2.5
     # via beautifulsoup4
 stemming==1.0.1
     # via -r requirements.in
-urllib3==2.0.7
+urllib3==2.1.0
     # via requests
 wikipedia==1.4.0
     # via -r requirements.in
-yarl==1.9.2
+yarl==1.9.3
     # via aiohttp
