--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -11,10 +11,15 @@ on:
     types:
       - published
 
+env:
+  image_name: ghcr.io/williamjacksn/podcast-tools
+
 jobs:
 
   build:
     name: Build the container image
+    permissions:
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
@@ -23,27 +28,33 @@ jobs:
       - name: Build the container image
         uses: docker/build-push-action@v5
         with:
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-          cache-from: |
-            ghcr.io/${{ github.repository_owner }}/wormgas
-          load: true
-          tags: ghcr.io/${{ github.repository_owner }}/wormgas
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ${{ env.image_name }}:latest
 
       - name: Log in to GitHub container registry
         if: github.event_name == 'push' || github.event_name == 'release'
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
           password: ${{ github.token }}
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
 
       - name: Push latest image to registry
         if: github.event_name == 'push'
-        run: docker image push ghcr.io/${{ github.repository_owner }}/wormgas
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          push: true
+          tags: |
+            ${{ env.image_name }}:latest
 
-      - name: Tag and push release image to registry
+      - name: Push release image to registry
         if: github.event_name == 'release'
-        run: |
-          docker image tag ghcr.io/${{ github.repository_owner }}/wormgas:latest ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
-          docker image push ghcr.io/${{ github.repository_owner }}/wormgas:${{ github.event.release.tag_name }}
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          push: true
+          tags: |
+            ${{ env.image_name }}:latest
+            ${{ env.image_name }}:${{ github.event.release.tag_name }}
