Add notch to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
+notch==2023.1
+    # via -r requirements.in
 requests==2.32.3
     # via wikipedia
 soupsieve==2.6
