Add compose service for pip-compile

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,15 @@ services:
     image: ghcr.io/williamjacksn/wormgas
     init: true
 
+  pip-compile:
+    entrypoint:
+      - /home/python/venv/bin/pip-compile
+    image: ghcr.io/williamjacksn/pip-tools:py3.12
+    init: true
+    volumes:
+      - ./:/home/python/video-index
+    working_dir: /home/python/video-index
+
   shell:
     entrypoint:
       - /bin/bash
