--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,8 @@ aiosignal==1.3.2
     # via aiohttp
 attrs==25.1.0
     # via aiohttp
-audioop-lts==0.2.1 ; python_version >= "3.13"
-    # via
-    #   -r requirements.in
-    #   discord-py
+audioop-lts==0.2.1
+    # via discord-py
 beautifulsoup4==4.13.3
     # via wikipedia
 certifi==2025.1.31
