Don't generate yaml

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,29 +1,10 @@
-{
-  "updates": [
-    {
-      "allow": [
-        {
-          "dependency-type": "all"
-        }
-      ],
-      "directory": "/",
-      "package-ecosystem": "github-actions",
-      "schedule": {
-        "interval": "daily"
-      }
-    },
-    {
-      "allow": [
-        {
-          "dependency-type": "all"
-        }
-      ],
-      "directory": "/",
-      "package-ecosystem": "uv",
-      "schedule": {
-        "interval": "daily"
-      }
-    }
-  ],
-  "version": 2
-}
+version: 2
+updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weeky
+  - package-ecosystem: uv
+    directory: /
+    schedule:
+      interval: weekly
