--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -1,47 +1,30 @@
-{
-  "env": {
-    "description": "This workflow (.github/workflows/ruff.yaml) was generated from ci/gen.py"
-  },
-  "jobs": {
-    "ruff": {
-      "name": "Run ruff linting and formatting checks",
-      "runs-on": "ubuntu-latest",
-      "steps": [
-        {
-          "name": "Check out repository",
-          "uses": "actions/checkout@v5"
-        },
-        {
-          "name": "Run ruff check",
-          "uses": "astral-sh/ruff-action@v3",
-          "with": {
-            "args": "check --output-format=github"
-          }
-        },
-        {
-          "name": "Run ruff format",
-          "uses": "astral-sh/ruff-action@v3",
-          "with": {
-            "args": "format --check"
-          }
-        }
-      ]
-    }
-  },
-  "name": "Ruff",
-  "on": {
-    "pull_request": {
-      "branches": [
-        "master"
-      ]
-    },
-    "push": {
-      "branches": [
-        "master"
-      ]
-    }
-  },
-  "permissions": {
-    "contents": "read"
-  }
-}
+name: Ruff
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+
+permissions:
+  contents: read
+
+jobs:
+  ruff-check:
+    name: Run ruff check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v6
+      - name: Run ruff check
+        run: sh ci/ruff-check.sh
+  ruff-format:
+    name: Run ruff format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v6
+      - name: Run ruff format
+        run: sh ci/ruff-format.sh
