--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: weeky
+      interval: weekly
   - package-ecosystem: uv
     directory: /
     schedule:
